--- a/content/tutorials/java/06_waves.mdx
+++ b/content/tutorials/java/06_waves.mdx
@@ -24,10 +24,7 @@ and the best test of the equation was when it was used to solve for the energy l
 It was initially much less obvious what the wavefunction of the equation was. After much debate, the wavefunction is now accepted to be a probability distribution. 
 The Schrodinger equation is used to find the allowed energy levels of quantum mechanical systems (such as atoms, or transistors). The associated wavefunction gives the probability of finding the particle at a certain position.
 
-
-[Waves](https://en.wikibooks.org/wiki/High_School_Chemistry/Schrodinger%27s_Wave_Functions)
-
-In layman terms: Only a specific set of waves can exist in nature (becuase we cannot have infinit potential). 
+In layman terms: Only a specific set of [waves](https://en.wikibooks.org/wiki/High_School_Chemistry/Schrodinger%27s_Wave_Functions) can exist in nature (becuase we cannot have infinit potential). 
 The valid wave equations are defined by Schrodinger equation. As you see in the below diagram only valid wavelengths 
 can exist and as an atomic particle can be represented as a wave particle, the energies(frequencies) can only be discrete and not conitnous.
 <figure>
