--- a/content/tutorials/java/04_solids.mdx
+++ b/content/tutorials/java/04_solids.mdx
@@ -14,7 +14,7 @@ import BodyCenteredCubic from './images/lbc_cubic.svg'
 import FaceCenteredCubic from './images/lfc_cubic.svg'
 import ResponsiveTable from 'components/responsive-table'
 
-### Solid materials
+## Solid materials
 Solid materials are classified by the way the atoms are arranged within the solid.([1](https://ecee.colorado.edu/~bart/book/book/chapter2/ch2_2.htm))
 
 #### Amorphous
