--- a/content/tutorials/java/06_waves.mdx
+++ b/content/tutorials/java/06_waves.mdx
@@ -1,6 +1,6 @@
 ---
 layout: page-collection
-title:  "BWaves"
+title:  "Schrödinger equation"
 categories: ["physics", "chemistry"]
 comments: true
 classes: wide
@@ -10,9 +10,7 @@ toc: true
 ---
 import SW from './images/standing-wave.svg'
 
-
-
-# Band diagrams
+## Band diagrams
 At the beginning of the twentieth century, experimental evidence suggested that atomic particles were also [wave-like](https://en.wikipedia.org/wiki/Wave%E2%80%93particle_duality) in nature. 
 For example, electrons were found to give diffraction patterns when passed through a double slit in a similar way to light waves.
 Therefore, it was reasonable to assume that a wave equation could explain the behaviour of atomic particles. 
