--- a/content/tutorials/java/index.mdx
+++ b/content/tutorials/java/index.mdx
@@ -4,3 +4,17 @@ date: "2019-02-08T21:40:32.169Z"
 categories: ["tech"]
 ---
 
+This blog started as a basic Java tutorial.
+
+- To understand java, we need to understand jvm basics
+- To understand jvm,  we need to understand basics of microprocessors
+- To understand microprocessors, we need basics of transistors
+- To understand transistors, we need to know diodes
+- To understand diodes, we need to understand semi conductors
+- To understand semi conductors we need to understand band gaps and quantum physics basics
+- To understand quantum physics, we need to understand atomic basics
+
+This blog does not go through any detailed numerical analysis, 
+but try to give some basic introduction on how computers work.
+
+
