--- a/content/tutorials/java/05_bandgap.mdx
+++ b/content/tutorials/java/05_bandgap.mdx
@@ -19,8 +19,7 @@ import Atom8 from './images/atom8.svg'
 import Atom9 from './images/atom9.svg'
 import PIB from './images/pib.svg'
 
-
-# Band diagrams
+## Band diagrams
 Before we go to the details of band diagrams. Lets understand on a very basic level what energy bands
 are and how they form.
 [Quantum Mechanical Model](https://www.khanacademy.org/science/physics/quantum-physics/quantum-numbers-and-orbitals/a/the-quantum-mechanical-model-of-the-atom)
