--- a/content/blog/new-born/index.mdx
+++ b/content/blog/new-born/index.mdx
@@ -7,6 +7,8 @@ comments: true
 repository: pradeepvemulakonda
 staticman.branch: master
 classes: wide
+categories: ["blog"]
 ---
 
-ఇది తెలుగులో నా మొదటి బ్లాగ్ పోస్ట్
+*మూడవ రొజు పత్యం*
+సొంఠి పొడి, నెయ్యీ, నువ్వుల నునె, కారం పొడి,బీరకయ కూర, వెల్లుల్లిపాయ, పొట్లకాయ, లెత దొందకాయ కూర, పెట్టవచ్ఛు.
