--- a/content/blog/new-born/index.mdx
+++ b/content/blog/new-born/index.mdx
@@ -2,12 +2,11 @@
 layout: single
 title:  "To-Do for new borns"
 date: "2020-01-02T22:40:32.169Z"
-categories: ["telugu"]
+categories: ["telugu", "blog"]
 comments: true
 repository: pradeepvemulakonda
 staticman.branch: master
 classes: wide
-categories: ["blog"]
 ---
 
 *మూడవ రొజు పత్యం*
