--- a/content/blog/new-born/index.mdx
+++ b/content/blog/new-born/index.mdx
@@ -12,5 +12,9 @@ classes: wide
 *మూడవ రొజు పత్యం*
 సొంఠి పొడి, నెయ్యీ, నువ్వుల నునె, కారం పొడి,బీరకయ కూర, వెల్లుల్లిపాయ, పొట్లకాయ, లెత దొందకాయ కూర, పెట్టవచ్ఛు.
 
-పది రొజుల తరువాత నుంచి ఆవకాయ, బొప్పాస కాయ, తెలగ పిండి పొడి పెట్టవచ్చు
+పది రొజుల తరువాత నుంచి ఆవకాయ, బొప్పాస కాయ, తెలగ పిండి పొడి పెట్టవచ్చు.
+
+పదవ రోజు మరియు పదకొండవ రోజు పాలు అన్నము, నేతి తో కాల్చిన చపతి/పుల్క పెట్టాలి.
+
+
 
