--- a/content/blog/new-born/index.mdx
+++ b/content/blog/new-born/index.mdx
@@ -14,7 +14,13 @@ classes: wide
 
 పది రొజుల తరువాత నుంచి ఆవకాయ, బొప్పాస కాయ, తెలగ పిండి పొడి పెట్టవచ్చు.
 
-పదవ రోజు మరియు పదకొండవ రోజు పాలు అన్నము, నేతి తో కాల్చిన చపతి/పుల్క పెట్టాలి.
+పదవ రోజు రాత్రి పాలు అన్నము పెట్టాలి
+
+పదకొండు రోజులవరకు రాత్రి నేతితో తో కాల్చిన చపతి పెట్టాలి అన్నము పెట్టకూడదు.
+
+
+
+
 
 
 
