--- a/content/blog/new-born/index.mdx
+++ b/content/blog/new-born/index.mdx
@@ -16,7 +16,17 @@ classes: wide
 
 పదవ రోజు రాత్రి పాలు అన్నము పెట్టాలి
 
-పదకొండు రోజులవరకు రాత్రి నేతితో తో కాల్చిన చపతి పెట్టాలి అన్నము పెట్టకూడదు.
+పదకొండు రోజులవరకు రాత్రి నేతితో తో కాల్చిన చపతి లేక బ్రెడ్డు/బటర్ పెట్టాలి అన్నము పెట్టకూడదు.
+
+పదిహేనో రోజు మినప రొట్టి పెట్టాలి.
+
+పదకొండో రోజు స్నానం చేసి అన్ని తినవచ్చు.
+
+ఇరవై ఒక్క రోజుల తరువాత కొంచం పాత పచడ్లు, మినప నున్ని పెట్టాలి.
+
+
+
+ 
 
 
 
